--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
     --theme-text: hsl(228, 34%, 66%);
     --header-text: hsl(0, 0%, 100%);
     --slider: linear-gradient(to right, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+    --overview-heading: hsl(0, 0%, 100%);
 }
 /* [data-theme="light-mode"] {
     --main-bg: hsl(0, 0%, 100%);
@@ -26,6 +27,7 @@
     --theme-text: hsl(228, 12%, 44%);
     --header-text: hsl(230, 17%, 14%);
     --slider: hsl(230, 22%, 74%);
+    --overview-heading: hsl(228, 12%, 44%);
     Very Pale Blue (Top BG Pattern): hsl(225, 100%, 98%)
 } */
 /* ================================================================
@@ -47,6 +49,7 @@ body.light-mode {
     --card-hover: hsl(225, 100%, 98%);
     --theme-text: hsl(228, 12%, 44%);
     --header-text: hsl(230, 17%, 14%);
+    --overview-heading: hsl(228, 12%, 44%);
 }
 h1,
 h2,
@@ -118,9 +121,10 @@ p {
 .button-info {
     display: inline;
     position: relative;
-    top: 5px;
+    top: 6px;
     right: 5px;
     font-weight: 700;
+    padding-right: 10px;
 }
 .dashboard-header-right {
     display: flex;
@@ -152,15 +156,15 @@ p {
 }
 .slider::before {
     position: absolute;
-    content: "";
+    content: '';
     height: 20px;
     width: 20px;
     left: 6px;
-    bottom: 5px;
+    bottom: 4px;
     background-color: var(--card-bg);
     -webkit-transition: .4s;
     transition: .4s;
-  }
+}
 input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
@@ -248,12 +252,47 @@ input:checked + .slider:before {
     font-weight: 700;
     font-size: .8rem;
 }
+.overview-heading {
+    color: var(--overview-heading);
+}
 
 /* ================================================================
                         MEDIA QUERIES
 ================================================================= */
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 700px) {
+    #hero {
+        width: 100%;
+    }
+    /* DASHBOARD HEADER */
+    .dashboard-header {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        justify-content: stretch;
+        width: 100%;
+        padding: 0;
+    }
+    .dashboard-header-left {
+        display: block;
+        padding-bottom: 30px;
+    }
+    .main-heading {
+        display: block;
+        letter-spacing: 0.08em;
+        font-size: 2rem;
+    }
+    .dashboard-header-right {
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        border-top: 1px solid var(--theme-text);
+        padding-top: 20px;
+    }
+    .button-info {
+        position: relative;
+        left: 0;
+    }
     /* OVERVIEW SECTION */
     .overview-heading {
         font-size: 1.8rem;
